# wumpy

./: .coveragerc  .flake8  .gitignore  .isort.cfg  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  issue.yml
.github/workflows/: lint.yml  lint_test.yml  test.yml  triaging.yml
.github/workflows/labeler/: subpackages.yml
docs/: mkdocs.yml  requirements.txt
docs/source/: index.md
docs/source/css/: _extra.css
docs/theme/: head.jinja2  main.html  stylesheet.css
tests/: README.md
tests/wumpy/: test_extension.py  test_utils.py
tests/wumpy-bot/: test_dispatcher.py  test_extension.py
tests/wumpy-client/: test_dispatcher.py  test_extension.py
tests/wumpy-gateway/: test_limiter.py
tests/wumpy-models/: test_base.py  test_bitfield.py  test_flags.py  test_message.py  test_permissions.py
tests/wumpy-rest/: test_ratelimiter.py
wumpy/: __init__.py  errors.py  extension.py  utils.py
wumpy/events/: __init__.py  channel.py  message.py
wumpy/events.py/: message.py
wumpy/gateway/: __init__.py  cache.py  client.py  rest.py  shard.py  ws.py
wumpy/http/: __init__.py  client.py  locks.py  ratelimiter.py  requester.py
wumpy/interactions/: __init__.py  app.py  base.py  rest.py
wumpy/models/: __init__.py  asset.py  base.py  channels.py  flags.py  guild.py  member.py  permissions.py  user.py
wumpy/rest/: __init__.py  client.py  locks.py  ratelimiter.py  requester.py  utils.py  webhook.py
wumpy/state/: __init__.py  cache.py  rest.py  state.py  ws.py
(+52 files in other folders)
